Galleon
-------

Version 2.4.2:
----------------------
* Added scalable backgrounds that fit the screen in HD mode for pictures and music
* Fixed the HD playbar in the music app so it draws properly
* Fixed layout on music player screen when in HD mode
* Increased font size on music app in HD mode for all screens
* Fixed screen saver on music app to fill the entire screen
* Fixed lyrics downloading to grab from a different source since lyrictracker is down
* Fix MacOS problems (tracker #1760027)

Version 2.4.1:
----------------------
* Turned off HD for applications that don't need it (e.g. top level menu,
  Weather since its maps are small)
* Updated Mac OS X install to put applications in subdirectory:
  /Applications/Galleon/
* Fixed Mac OS launch scripts to enable quit function
* Fixed Movies application (needed an update to parse HTML output change from data source)
* Fixed Windows installer JRE detection (accepts Java 6)
* Fixed MusicOrganizer MP3 count (1746310)
* Upgrade to htmlparser-1.6 (fixes movierentals add-on application)
* Added movieRentals application to distribution
* Fixed log file location on windows to put logs inside the logs directory

Version 2.4.0 alpha:
----------------------
HD application support.  Try out HD photos!
Local forecast page added to weather.
Known problems:
 * tracker on music in HD is goofy
 * galleon skins in HD don't cover screen--use tivo skins
 * lots of layout glitches in HD
 * HD menu highlights are too big for text
 
Version 2.3.1:
----------------------
Upgraded open-source components to mostly current versions
Use track title instead of file name for "Music" listings
Published modified Bananas library
Switched to build with Java 1.5

Sources are tagged GALLEON_2_3_1 in CVS repository

Native windows packaging is not supported--use the regular version.
You must have Java 5 JRE or higher installed--none is included.

*** Please send in bug reports if there are any problems with things